# optiga-trust-m

./: .project  CMakeLists.txt  LICENSE  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.old  sdkconfig.old
examples/mbedtls_port/: trustm_ecdsa.c
extras/pal/esp32_freertos/: pal_i2c.c  pal_os_event.c
include/pal/: pal_os_event.h
main/: CMakeLists.txt  main.c  mbedtls_user_config.h  mqtt_optiga_demo.c  optiga_cert.c  optiga_cert.h  optiga_demo_shared.h  optiga_ecdh_alt.c  optiga_ecdsa_alt.c  sdkconfig.defaults
tests/: .cproject
